--- a/backend/coolreads/src/main/resources/application.properties
+++ b/backend/coolreads/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=coolreads
+
+# Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/cool
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
