--- a/coolreads/package.json
+++ b/coolreads/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "bootstrap-icons": "^1.11.3",
     "primeicons": "^7.0.0",
     "primevue": "^3.52.0",
