--- a/backend/coolreads/src/main/resources/application.properties
+++ b/backend/coolreads/src/main/resources/application.properties
@@ -7,4 +7,5 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.format_sql=true
