--- a/coolreads/package.json
+++ b/coolreads/package.json
@@ -11,14 +11,10 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bootstrap-icons": "^1.11.3",
-    "jwt-decode": "^4.0.0",
     "primeicons": "^7.0.0",
     "primevue": "^3.52.0",
-    "store": "^2.0.12",
-    "vee-validate": "^4.13.1",
-    "vue": "^3.4.27",
-    "vue-router": "^4.3.0",
-    "vuex": "^4.1.0"
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
