--- a/backend/coolreads/pom.xml
+++ b/backend/coolreads/pom.xml
@@ -98,6 +98,15 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 			<version>3.3.0</version>
 		</dependency>
+
+		<!-- Bucket for images -->
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>google-cloud-storage</artifactId>
+			<version>2.40.0</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
