--- a/coolreads/package.json
+++ b/coolreads/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "^8.8.0",
     "axios": "^1.7.2",
     "bootstrap-icons": "^1.11.3",
     "jwt-decode": "^4.0.0",
@@ -17,6 +18,7 @@
     "store": "^2.0.12",
     "vee-validate": "^4.13.1",
     "vue": "^3.4.27",
+    "vue-image-upload": "^1.0.1",
     "vue-router": "^4.3.0",
     "vuex": "^4.1.0"
   },
