remove principal + dynamic mail

--- a/backend/coolreads/src/main/resources/application.properties
+++ b/backend/coolreads/src/main/resources/application.properties
@@ -19,6 +19,7 @@ security.jwt.secret-key=3cfa76ef14937c1c0ea519f8fc057a80fcd04a7420f8e8bcd0a7567c
 security.jwt.expiration-time=3600000
 
 #Mail Properties
+coolreads.mail=no-reply@coolreads.com
 spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.port=2525
 spring.mail.username=48d43d55f99f02
