--- a/backend/coolreads/src/main/resources/application.properties
+++ b/backend/coolreads/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=coolreads
-spring.profiles.active=test
+spring.profiles.active=prod
 
 # Hibernate
 spring.jpa.hibernate.ddl-auto=update
