--- a/backend/coolreads/pom.xml
+++ b/backend/coolreads/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.aa</groupId>
 	<artifactId>coolreads</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>coolreads</name>
 	<description>CoolReads Project in spring boot</description>
 	<properties>
@@ -43,11 +43,6 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
