--- a/coolreads/package.json
+++ b/coolreads/package.json
@@ -22,6 +22,7 @@
     "vue-chartjs": "^5.3.1",
     "vue-image-upload": "^1.0.1",
     "vue-router": "^4.3.0",
+    "vue-toast-notification": "^3.1.2",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
