--- a/backend/ansible/laravelio-deploy.yml
+++ b/backend/ansible/laravelio-deploy.yml
@@ -6,6 +6,6 @@
   gather_facts: false
   roles:
     - gke_namespace_create
-    - laravelioDB_deploy
+    - coolreadsDB_deploy
     - coolreads_deploy
     
