--- a/backend/ansible/laravelio-undeploy.yml
+++ b/backend/ansible/laravelio-undeploy.yml
@@ -5,5 +5,5 @@
   hosts: localhost
   gather_facts: false
   roles:
-    - laravelioDB_undeploy
+    - coolreadsDB_undeploy
     - coolreads_undeploy
