--- a/backend/ansible/roles/gke_namespace_create/tasks/main.yml
+++ b/backend/ansible/roles/gke_namespace_create/tasks/main.yml
@@ -5,4 +5,4 @@
     template: 'cool-namespace'
 
 - name: Switch namespace to cool_namespace
-  shell: kubectl config set-context --current --namespace={{ cool_namespace }}
+  shell: kubectl config set-context --current --namespace={{ coolreads_namespace }}
